# other/api/swagger.yaml
@@ -275,6 +275,42 @@ paths:
       produces:
       - "application/json"
       parameters:
+      - name: "offset"
+        in: "query"
+        description: "Pagination offset. Default is 0."
+        required: false
+        type: "integer"
+      - name: "limit"
+        in: "query"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed 500."
+        required: false
+        type: "integer"
+      - in: path
+        name: Id_author
+        description: "ID of author"
+        required: true
+        format: "int64"
+        type: integer
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Author"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Author not found"
+      x-swagger-router-controller: "Author"
+  /authors/{Id_author}/count_books:
+    get:
+      tags:
+      - "author"
+      summary: "Find number of books writen by author by ID"
+      description: "Returns a number"
+      operationId: "getCountBooksByAuthorId"
+      produces:
+      - "application/json"
+      parameters:
       - in: path
         name: Id_author
         description: "ID of author"
