# other/controllers/Author.js
@@ -3,12 +3,17 @@
 var utils = require('../utils/writer.js');
 var AuthorService = require('../service/AuthorService.js');
 
+var offset = 0;
+var limit = 0;
+
 module.exports.authorsGET = function authorsGET (req, res, next) {
-    console.log("authorsGET");
+    
     var offset = 0;
     var limit = 0;
+    
     req.swagger.params['offset'].value ? offset = req.swagger.params['offset'].value : offset = 0;
     req.swagger.params['limit'].value ? limit = req.swagger.params['limit'].value : limit = 20;
+    
     AuthorService.authorsGET(offset,limit)
         .then(function (response) {
             utils.writeJson(res, response);
@@ -19,14 +24,41 @@ module.exports.authorsGET = function authorsGET (req, res, next) {
 };
 
 module.exports.getAuthorById = function getAuthorById (req, res, next) {
-  var authorId = req.swagger.params['Id_author'].value;
+    var authorId = req.swagger.params['Id_author'].value;
+    
+    AuthorService.getAuthorById(authorId)
+        .then(function (response) {
+            utils.writeJson(res, response);
+        })
+        .catch(function (response) {
+            utils.writeJson(res, response);
+        });
+};
 
-  AuthorService.getAuthorById(authorId)
+module.exports.getBooksByAuthorId = function getBooksByAuthorId(req, res, next) {
+    var authorId = req.swagger.params['Id_author'].value;
+    
+    req.swagger.params['offset'].value ? offset = req.swagger.params['offset'].value : offset = 0;
+    req.swagger.params['limit'].value ? limit = req.swagger.params['limit'].value : limit = 6;
+    
+    AuthorService.getBooksByAuthorId(offset,limit,authorId)
     .then(function (response) {
-      utils.writeJson(res, response);
+        utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+        utils.writeJson(res, response);   
     });
 };
 
+module.exports.getCountBooksByAuthorId = function getCountBooksByAuthorId (req, res, next) {
+    console.log("getCountBooksByAuthorId");
+    var authorId = req.swagger.params['Id_author'].value; 
+    
+    AuthorService.getCountBooksByAuthorId(authorId)
+        .then(function (response) {
+            utils.writeJson(res, response);
+        })
+        .catch(function (response) {
+            utils.writeJson(res, response);
+        });
+};
